objects/Subscription_Product__c.object
<CustomObject>
    <fields>
        <fullName>APN_Number__c</fullName>
        <description>What it Does? APN Number of the product
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <formula>Product__r.APN_Number__c</formula>
        <label>APN Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_End_Date__c</fullName>
        <description>What it does? Used to store End Date of Active use of Product. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>Active End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Start_Date__c</fullName>
        <description>What it does? Used to store Start Date of Active use of Product. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>Active Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? adjustment discount applied for the line item
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <label>Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amendment_For__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? Stores previous subscription product from amended subscription
Downstream Impact? Effects reporting and billing integration 
Which department is owner? IT/PureCloud Team</description>
        <label>Amendment For</label>
        <referenceTo>Subscription_Product__c</referenceTo>
        <relationshipLabel>Amended To</relationshipLabel>
        <relationshipName>Amendment_For</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it does? Store wheather Billiable.
 Downstream Impact? None. 
Which Department is Owner? IT</description>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Category__c</fullName>
        <label>Billing Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Pre-Pay</fullName>
                </value>
                <value>
                    <fullName>Annual M2M</fullName>
                </value>
                <value>
                    <fullName>M2M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? Stores the bundle information
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <label>Bundle</label>
        <referenceTo>Subscription_Product__c</referenceTo>
        <relationshipLabel>Subscription Products</relationshipLabel>
        <relationshipName>Subscription_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Committed_Quantity__c</fullName>
        <label>Committed Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? Discount for line item
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ECCN__c</fullName>
        <description>What it does? Stores the ECCN . Downstream Impact?Reporting. Which Department is Owner? Finance</description>
        <formula>Product__r.ECCN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ECCN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_List__c</fullName>
        <description>What it Does? extended list price of the line item
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <label>Ext List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ext_Net_Price_Change__c</fullName>
        <description>What it Does? CCDB - Displays Delta extended net price 
Downstream Impact? CCDB 
Which department is owner? IT/CSM</description>
        <formula>IF(NOT(ISBLANK(Amendment_For__c)), Ext_Net_Price__c - Amendment_For__r.Ext_Net_Price__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ext Net Price Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ext_Net_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? extended net price of the line item
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <label>Ext Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <description>What it Does? Stores proposal group number of the line item
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <label>Group Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does? Decides whether to display this line item or not in quoting tool
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <inlineHelpText>If this box is checked, this part is required for the subscription to function properly, but is not quotable.</inlineHelpText>
        <label>Hide Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Overage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does? Identifies whether the line item is an overage or not
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <inlineHelpText>If this box is checked, this part is billed based on actual usage or usage over the committed product quantity.</inlineHelpText>
        <label>Is Overage?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <description>What it Does?Line number of the line item
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <label>Line #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? List price of the line item
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSRP__c</fullName>
        <description>What it Does? PCC CPQ : Store the highest value based on Billing category. 
Downstream Impact? PCC CPQ, Reporting 
Which department is owner? IT</description>
        <label>MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Unit_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? Net unit price of the line item
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <label>Net Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <description>What it does? Field to store Offer of related Quote Product. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>Offer</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_List_Price__c</fullName>
        <description>What it Does? Stores original list price from Product2 which doesn&apos;t change ever.
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Original List Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PCC_Migration_Sub_Prod_Unique_ID__c</fullName>
        <description>Field used to track Subscription Product inserted during PCC CCDB Migration.Will be deleted after PCC CCDB system has stabilized.</description>
        <label>PCC Migration Sub Prod Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCC_Migration_Subscription_Unique_ID__c</fullName>
        <description>Field used to map Subscriptions Created to the Subscription Products for PCC CCDB Migration</description>
        <label>PCC Migration Subscription Unique ID</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Approver__c</fullName>
        <description>What it Does? Approver information
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <label>PM Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POB_Type__c</fullName>
        <description>What it Does? RevPro : Store the POB Type 
Downstream Impact? RevPro integration 
Which department is owner? IT</description>
        <label>POB Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>POB_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? Partner price of the line item if the opportunity is based on partner
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <label>Partner Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Play__c</fullName>
        <description>What it does? Field to store Play of related Quote Product. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>Play</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>Product__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Option__c</fullName>
        <description>What it Does? Stores whether the product option or not
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <label>Product Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Quantity__c</fullName>
        <description>What it Does? Stores the quantity of the line item
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <formula>IF(ISPICKVAL(Product_Option__c, &quot;Yes&quot;), &quot;Yes&quot;, Text(Quantity__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of licenses the customers have committed to on a monthly basis or purchased as a one-time fee.</inlineHelpText>
        <label>Product Quantity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? Stores the product lookup
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Subscription Products</relationshipLabel>
        <relationshipName>Subscription_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Change__c</fullName>
        <description>What it Does? Stores quantity difference between predecessor subscription product quantity and current one 
Downstream Impact? Effects totals, reporting and billing integration 
Which department is owner? IT/PureCloud Team</description>
        <formula>IF(NOT(ISBLANK(Amendment_For__c)), Quantity__c - Amendment_For__r.Quantity__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? Stores the quantity of the line item
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? Stores the relation to quote product of the associated quote
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <label>Quote Product</label>
        <referenceTo>BigMachines__Quote_Product__c</referenceTo>
        <relationshipLabel>Subscription Products</relationshipLabel>
        <relationshipName>Subscription_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SP_18_digit_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SP 18 digit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Cumulative_Total_for_Amend__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Store Cumulative Total for Amend</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Burst_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Burst Term</label>
        <referenceTo>Subscription_Burst_Term__c</referenceTo>
        <relationshipLabel>Subscription Products</relationshipLabel>
        <relationshipName>Subscription_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <description>What it Does? Stores parent subscription
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Subscription Products</relationshipLabel>
        <relationshipName>Subscription_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? Stores total discount of the line item
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <label>Total Discount %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? Stores the total price of the line item
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <label>Total Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Product__c</fullName>
        <description>What it does? Used to differentiate between types of products on Subscription Level. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>Type of Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ordinary</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora_Id__c</fullName>
        <description>What it Does? Stores original zuora subscription product id 
Downstream Impact? Effects data migration
Which department is owner? IT Team</description>
        <label>Zuora Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>or_Amount__c</fullName>
        <description>What it Does? type of discount applied for the line item
Downstream Impact? Effects reporting and quote amendment/renewal
Which department is owner? IT/PureCloud Team</description>
        <label>% or Amount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Subscription Product</label>
    <nameField>
        <displayFormat>SP-{000000000}</displayFormat>
        <label>Subscription Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>